syntax = "proto3";

option go_package = "proto/";
option csharp_namespace = "protoBuff";

service Game {
  rpc List (SessionRequest) returns (SessionList) {}
  rpc Connect (ConnectRequest) returns (ConnectResponse) {}
  rpc Stream (stream Request) returns (stream Response) {}
}

message SessionRequest{

}

message SessionList{
  repeated Server servers = 1;
}

message Server{
  string id = 1;
  uint32 online = 2;
  uint32 max = 3;
}

message ConnectRequest {
  string session = 1;
}

message ConnectResponse {
  string token = 1;
  uint32 index = 2;
  repeated Entity entities = 3;
}

message Request {
  repeated StreamAction requests = 1;
}


message Response {
  repeated StreamAction responses = 1;
}

message StreamAction {
  oneof action {
    MoveEntity moveEntity = 1;
    AddEntity addEntity = 2;
    RemoveEntity removeEntity = 3;
    UpdateEntity updateEntity = 4;
  }
}

message Position {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Rotation {
  float w = 1;
  float x = 2;
  float y = 3;
  float z = 4;
}

message Entity {
  bytes id = 1;
  Position position = 2;
  Rotation rotation = 3;
  string type = 4;
  string Data = 5;

}
message AddEntity {
  Entity entity = 1;
  optional bool keepOnDisconnect = 2;
}

message UpdateEntity {
  Entity entity = 1;
}

message RemoveEntity {
  bytes id = 1;
}

message MoveEntity {
  bytes id = 1;
  Position position = 2;
  Rotation rotation = 3;
}